--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "request": "^2.88.2"
   }
 }
