--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "temperature-calculator",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://fantasy.premierleague.com/api/",
   "dependencies": {
     "@types/bootstrap": "^5.0.0",
     "@types/jquery": "^3.5.4",
@@ -12,7 +11,9 @@
     "cra-template-typescript": "1.1.0",
     "jquery": "^3.5.1",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0"
   },
   "scripts": {
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "typescript": "^4.0.5"
   }
 }
