--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@types/bootstrap": "^5.0.0",
     "@types/jquery": "^3.5.4",
     "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.11",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "cra-template-typescript": "1.1.0",
     "jquery": "^3.5.1",
     "react": "17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0"
+    "react-redux": "^7.2.2",
+    "react-scripts": "4.0.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
